--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="arcade-container">
+            <div class="arcade-screen">
+                <canvas id="gameCanvas" width="300" height="600"></canvas>
+            </div>
+        </div>
         <div class="text-container">
             <div class="text-left">Desafio Tetris</div>
             <div class="text-right">do Bootcamp Pass</div>
-        </div>
-        <div class="tetris-game">
-            <canvas id="gameCanvas" width="300" height="600"></canvas>
         </div>
     </div>
     <script src="tetris.js"></script>
